PLATUI-4002: stop long service names moving sign out link to new line
squashed changes to make rebase easier

TODO add patryk as collaborator

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -12,30 +12,17 @@ $govuk-header-link-underline-thickness: 3px;
 
   .hmrc-sign-out-nav {
     float: right;
+    margin-bottom: 10px;
 
     .govuk-template--rebranded & {
-      @include govuk-media-query($from: desktop) {
-        padding-top: govuk-spacing(3) + 3px; // makes the baseline match gov.uk logo and service name
-      }
-    }
-  }
-
-  .govuk-header__navigation + .hmrc-sign-out-nav {
-    .govuk-template--rebranded & {
-      padding-top: 0;
-      padding-bottom: govuk-spacing(2);
+      margin-bottom: 15px;
     }
   }
 
   .hmrc-sign-out-nav__link {
     color: govuk-colour("white");
     font-weight: bold;
-    line-height: 1.64285;
     text-decoration: none;
-
-    @include govuk-media-query($from: desktop) {
-      line-height: 2.375;
-    }
 
     &:hover {
       text-decoration: underline;
@@ -168,4 +155,47 @@ $govuk-header-link-underline-thickness: 3px;
 // Above style is breaking the user-research-banner when the rebrand is enabled
 .govuk-template--rebranded .hmrc-header + .hmrc-user-research-banner {
   top: 0;
+}
+
+// use of :has() and :not() is ok because this
+// issue isn't going to be a problem forever
+// because people are migrating to use service
+// navigation to display their service name and
+// navigation items. So it's making it better
+
+.hmrc-header:has(.govuk-header__navigation) {
+  .govuk-header__service-name {
+    @include govuk-media-query($until: mobile) {
+      float: none; // otherwise the menu button sits immediately to right of service name on smallest screens
+    }
+  }
+}
+
+.hmrc-header:has(.hmrc-sign-out-nav):not(:has(.govuk-header__navigation)) .govuk-header__content {
+  display: flex;
+  // not sure we need these fallbacks for `last baseline` but not hurting
+  align-items: flex-end;
+  align-items: end;
+  align-items: last baseline;
+}
+
+.hmrc-header:has(.hmrc-sign-out-nav):not(:has(.govuk-header__navigation)) .hmrc-sign-out-nav {
+  flex-shrink: 0;
+  margin-left: auto;
+}
+
+.hmrc-header:has(.hmrc-sign-out-nav):not(:has(.govuk-header__navigation)) .hmrc-sign-out-nav__link {
+  margin-left: 10px;
+}
+
+.hmrc-header:has(.govuk-header__navigation) .hmrc-sign-out-nav {
+  margin-top: 4px;
+
+  @include govuk-media-query($from: tablet) {
+    margin-top: 10px;
+  }
+
+  @include govuk-media-query($from: desktop) {
+    margin-top: 0;
+  }
 }
